# subjective-trust-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: LICENSE  architecture-overview.md  demo-guide.md  google-review-integration-v1.md  hq-analysis-ux-v1.md  language_selection_report.md  monitoring-impl.md  trust-observation-system-v1.md  trust-system-summary-mermaid.md  whitepaper-brand-trust.md
scripts/: seed_demo.py  test_google_api.py
src/python/: config.py
src/python/api/: main.py
src/python/batch/: pos_event_generator.py  pos_sync.py  review_fetcher.py  review_interpreter.py
src/python/db/: session.py
src/python/interpretation/: client.py  pipeline.py  prompts.py  schemas.py
src/python/monitoring/: common.py  main_daily.py  main_weekly.py
src/python/scoring/: calculator.py  weights.py
src/python/utils/: pii_masker.py
task/: task-peripheral-dev.md  task-phase1.md  task-pos-integration.md
tests/python/: conftest.py
tests/python/ai/: test_review_prompt.py
tests/python/batch/: test_pos_event_generator.py  test_pos_sync.py  test_review_fetcher.py  test_review_interpreter.py
tests/python/evidence/: integration_result.txt  unit_result.txt
tests/python/fixtures/: mock_interpretation.json  pos_mock_data.json
tests/python/monitoring/: test_critical.py  test_daily.py  test_weekly.py
tests/python/unit/: test_alert_generator.py  test_calculator.py  test_cold_start.py  test_config.py  test_event_generator.py  test_feedback_api.py  test_health.py  test_models.py  (+8 more)
(+33 files in other folders)
