[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subjective-trust-platform"
version = "0.1.0"
description = "実店舗向けブランド信頼観測システム"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "polars>=1.16.0",
    "requests>=2.31.0",
    "functions-framework>=3.5.0",
    "tenacity>=8.2.0",
    "google-auth>=2.25.0",
    "google-api-python-client>=2.110.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
markers = [
    "integration: 統合テスト（DB 必要）",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
